          NbChannelOutputStream.
          Reported by David Fogel and Iestyn Evans.
        - Fixed internal client connector which didn't refresh entity 
          properties from headers values.
          Reported by Taylor Cowan.
        - Allowed to set the DATE header.
        - Fixed support of chunked response in the Netty connector.
          Reported by Laurent Rustuel.
    - Misc
        - Updated Simple framework library to version 4.1.17.
        - Deprecated Message#getEntityAs* methods.
        - Updated GWT library to version 2.0.
        - Updated WADL extension according to new WADL specification.
        - Improved thread safety of MapVerifier.
          Reported by Tim Peierls.
        - Updated Apache HTTP Client to version 4.0.1.
        
- 2.0 Milestone 6 (2009-11-20)
    - API changes
        - Renamed ChallengeScheme#HTTP_MS_SHAREDKEY into 
          HTTP_AZURE_SHAREDKEY and HTTP_MS_SHAREDKEY_LITE into 
          HTTP_AZURE_SHAREDKEY_LITE.
        - DataServices.Session#getMetadata() now returns on Object 
          to prevent link to internal class.
        - Upgraded the "org.restlet.ext.httpclient" extension to
          leverage Apache HTTP Client 4.0. WARNING: some parameters 
          were renamed due to API changes.
        - Refactored for simplification the security API introduced 
          in previous Restlet 2.0 milestones. 
           - The Organization class was removed and its "rootGroups" 
             and "users" properties were moved to MemoryRealm.
           - The Permission class was removed as it isn't necessarily
             the best way to enforce fine grained authorization. 
           - The RealmService class was removed and the "realms" 
             property moved to Component.
           - The ClientInfo#subject property was replaced by 
             "user : User", "roles : List<Role>" and "principals" to 
             remove the JAAS dependency.